Reduced warnings